2010-04-25  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14056: static ds wizard error-handling improvement if conf is missing
	* Fixed issue: #13936: noEditOnCreation don't work with static DS
	* Fixed issue: #12950: Add an option to tt_content , for disabling drag/drop

2010-04-20  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #13975: hasElementForeignReferences might cause maximum execution time error

2010-04-17  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14141: Drag&Drop should scroll automatically 
	* Fixed issue: #14136: JavaScript Problem - Drag and Drop  (Thanks to Frank Hirsch)

2010-04-13  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14083: global variable 'fileadminDir' not replaced by its value in help text under new site wizard

2010-04-12  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14082: specialDoktype handling for doktype 2 obsolete 
	* Fixed issue: #14081: specialDoktype pages should use FlashMessages
	* Fixed issue: #14080: "No Access" page should use FlashMessages 
	
2010-04-11  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Reverted changes for #10370: Implement new content element wizard 
	* Fixed issue: #7082: Configuration to handle inheritance DS like disabled
	* Fixed bug: #14036: compat_version comparision is used wrong

2010-04-10  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13873: TemplaVoila should use a docHeader as well (mod1) 

2010-04-06 Michael Klapper <michael.klapper@aoemedia.de>

	* Follow up to bugfix: #0012257: New Feature: localizable title fields 

2010-04-05  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13864: Flags in non-used elements shouldn't be wrapped to next line (Thanks to Jerome Blum)

2010-03-30  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13807: sorting CEs via list mode broken if translation 'diff' exists (Thanks to Jan Hacker)
	* Fixed bug: #12805: Interferences TV and feeditadvanced